--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h2>Recipes</h2>
+        <h2><a href="./index.html">Recipes</a></h2>
         <p><a href="./pages/breakfasts.html">Breakfasts</a></p>
         <p><a href="./pages/lunches.html">Lunches</a></p>
         <p><a href="./pages/dinners.html">Dinners</a></p>
