--- a/pages/lunches.html
+++ b/pages/lunches.html
@@ -7,11 +7,11 @@
     </head>
 
     <body>
-        <h2>Recipes</h2>
-        <p><a href="./pages/breakfasts.html">Breakfasts</a></p>
-        <p><a href="./pages/lunches.html">Lunches</a></p>
-        <p><a href="./pages/dinners.html">Dinners</a></p>
-        <p><a href="./pages/desserts.html">Desserts</a></p>
+        <h2><a href="../index.html">Recipes</a></h2>
+        <p><a href="../pages/breakfasts.html">Breakfasts</a></p>
+        <p><a href="../pages/lunches.html">Lunches</a></p>
+        <p><a href="../pages/dinners.html">Dinners</a></p>
+        <p><a href="../pages/desserts.html">Desserts</a></p>
 
         <h1>Lunches</h1>
     </body>
