--- a/pages/desserts.html
+++ b/pages/desserts.html
@@ -14,6 +14,10 @@
         <p><a href="../pages/desserts.html">Desserts</a></p>
 
         <h1>Desserts</h1>
+        <h2>Muffins</h2>
+            <ul>
+                <li><a href="../pages/bananabread.html">Banana Bread</a></li>
+            </ul>
     </body>
 
 </html>
