--- a/pages/bananabread.html
+++ b/pages/bananabread.html
@@ -15,7 +15,9 @@
 
     <h1>Banana Bread</h1>
     <img src="../img/bananabread.jpg" alt="Delicious loaf of banana bread cut into slices">
-        <h2>Ingredients</h2>
+        
+    <p>Banana bread is yummy and simple to make. It's a great way to use up those very ripe bananas that are left!</p>
+    <h2>Ingredients</h2>
             <ul>
                 <li>Flour</li>
                 <li>Wheat Germ</li>
