--- a/pages/dinners.html
+++ b/pages/dinners.html
@@ -14,6 +14,10 @@
         <p><a href="../pages/desserts.html">Desserts</a></p>
 
         <h1>Dinners</h1>
+        <h2>Pastas</h2>
+            <ul>
+                <li><a href="../pages/mac-n-cheese.html">Mac-n-Cheese</a></li>
+            </ul>
     </body>
 
 </html>
