Added CSS styles as well as correcting link styles

--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Recipes</title>
-    </head>
+<head>
+    <meta charset="utf-8">
+    <title>Recipes</title>
+    <link rel="stylesheet" href="./css/style.css">
+</head>
 
-    <body>
-        <h2><a href="./index.html">Recipes</a></h2>
-        <p><a href="./pages/breakfasts.html">Breakfasts</a></p>
-        <p><a href="./pages/lunches.html">Lunches</a></p>
-        <p><a href="./pages/dinners.html">Dinners</a></p>
-        <p><a href="./pages/desserts.html">Desserts</a></p>
-    
+<body>
+    <div class="navbar">
+        <div class="home"><a href="./index.html">Recipes</a></div>
+        <div class="page"><a href="./pages/breakfasts.html">Breakfasts</a></div>
+        <div class="page"><a href="./pages/lunches.html">Lunches</a></div>
+        <div class="page"><a href="./pages/dinners.html">Dinners</a></div>
+        <div class="page"><a href="./pages/desserts.html">Desserts</a></div>
+    </div>
         <h1>Homepage</h1>
     
-    </body>
+</body>
 
 </html>
